fixed content float overlap with bootstrap grid

--- a/1.2 Fakebook/style.css
+++ b/1.2 Fakebook/style.css
@@ -41,7 +41,7 @@ a:hover {
 
 #content.container {
     margin: auto;
-    padding: 20px 60px;
+
 }
 
 /* Profile Pic & Banner */
